--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         if ("serviceWorker" in navigator) {
             navigator.serviceWorker.register("ServiceWorker.js");
         }
-         // Розширити гру на весь екран після завантаження сторінки
+         Telegram.WebApp.expand(); // Розширити гру на весь екран після завантаження сторінки
       });
-      Telegram.WebApp.expand();
+      
 
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
