--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         if ("serviceWorker" in navigator) {
             navigator.serviceWorker.register("ServiceWorker.js");
         }
-         Telegram.WebApp.expand(); // Розширити гру на весь екран після завантаження сторінки
+         window.Telegram.WebApp.expand(); // Розширити гру на весь екран після завантаження сторінки
       });
       
 
